Added some padding to result window

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   border-radius: 5px;
   background: #5a5858;
   color: #eee;
-  /* padding: 20px 5px; */
+  padding: 20px 5px;
   text-align: center;
 }
 
